tests/macro-tests/cases/widget_new/missing_semi1.stderr
error: expected `;`
  --> cases/widget_new/missing_semi1.rs:13:9
   |
13 |         enabled = true;
   |         ^^^^^^^
